# openlink

./: .gitignore  Cargo.toml  README.md  adressing.md  cpdlc_message_reference.md  docker-compose.yml  inception.md  instructions.md  logon_connection.md
.github/workflows/: ci.yml  deploy-website-pages.yml
.nats/config/: ws.conf
clients/a320-mcdu-dcdu/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
clients/a320-mcdu-dcdu/src/: App.tsx  main.tsx
clients/a320-mcdu-dcdu/src/components/: DcduScreen.tsx  HomeScreen.tsx  McduScreen.tsx  StatusBar.tsx
clients/a320-mcdu-dcdu/src/hooks/: useOpenLink.ts
clients/a320-mcdu-dcdu/src/lib/: catalog.ts  envelope.ts  nats-client.ts  types.ts
clients/a320-mcdu-dcdu/src/styles/: index.css
clients/openlink-sdk-ts/: README.md  package-lock.json  package.json
clients/openlink-sdk-ts/src/: catalog.ts  client.ts  cpdlc-runtime.ts  envelope.ts  index.ts  nats-client.ts  types.ts
clients/openlink-sdk-ts/tests/: runtime-vectors.test.ts
crates/mock-oidc/: Cargo.toml  README.md
crates/mock-oidc/src/: main.rs
crates/openlink-auth/: Cargo.toml  README.md
crates/openlink-auth/src/: config.rs  error.rs  jwt.rs  main.rs  oidc.rs
crates/openlink-cli/: Cargo.toml  README.md
crates/openlink-cli/src/: app_state.rs  main.rs  tui.rs
crates/openlink-cli/src/ui/: atc.rs  mod.rs  pilot.rs
crates/openlink-gui/: Cargo.toml  README.md
crates/openlink-gui/src/: i18n.rs  main.rs  nats_client.rs  persistence.rs  state.rs  style.css
crates/openlink-gui/src/components/: a320_view.rs  atc_view.rs  atc_view_old.rs  dcdu_view.rs  mod.rs  shared.rs  station_setup.rs  tab_bar.rs
crates/openlink-hoppie/: Cargo.toml  README.md
crates/openlink-hoppie/src/: bridge.rs  config.rs  hoppie_client.rs  lib.rs  main.rs  session.rs  translator.rs
crates/openlink-loadtest/: Cargo.toml  README.md
crates/openlink-loadtest/src/: main.rs
crates/openlink-models/: Cargo.toml  README.md
crates/openlink-models/examples/: export_cpdlc_catalog.rs  generate_cpdlc_reference.rs
crates/openlink-models/src/: acars.rs  cpdlc.rs  envelope.rs  error.rs  lib.rs  message_builder.rs  network.rs  station.rs
crates/openlink-sdk/: Cargo.toml  README.md
crates/openlink-sdk/src/: client.rs  cpdlc_runtime.rs  credentials.rs  error.rs  lib.rs  subjects.rs
crates/openlink-server/: Cargo.toml  README.md
crates/openlink-server/src/: acars.rs  main.rs  server.rs  station_registry.rs
docs/acars-ref-gold/: adressing.md  inception.md  logon_connection.md  messaging.md
docs/research/: spec_dcdu_mcdu_airbus.md
docs/sdk/: README.md  addressing-routing.md  capabilities.md  concepts.md  conformance-profile.md  conformance-test-matrix.md  develop-new-sdk.md  envelopes-and-stack.md  high-level-api-contract.md  integrate-with-sdks.md  integration-architecture.md  integration-checklist.md  nats-transport.md  polyglot-sdk-contract.md  quickstart-raw-nats.md  stations-presence.md  typescript-sdk-compliance.md
docs/sdk/reference/: README.md  cpdlc-messages.md
docs/website/: openlink-overview-intro.md
spec/: README.md
spec/cpdlc/: catalog.schema.json  catalog.v1.json
spec/sdk-conformance/: README.md  runtime-vectors.v1.json  wire-examples.v1.json
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/scripts/: sync-docs.mjs
website/src/content/docs/: index.mdx
website/src/content/docs/guides/: example.md
website/src/content/docs/reference/: example.md
website/src/styles/: custom.css
