[workspace]
members = [
    "crates/openlink-models",
    "crates/openlink-auth",
    "crates/openlink-cli",
    "crates/openlink-loadtest",
    "crates/openlink-sdk",
    "crates/openlink-gui",
    "crates/mock-oidc",
    "crates/openlink-server",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
# ── Internal crates ──────────────────────────────────────────────
openlink-models = { path = "crates/openlink-models" }
openlink-sdk    = { path = "crates/openlink-sdk" }

# ── Serialisation ────────────────────────────────────────────────
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# ── Async runtime & messaging ───────────────────────────────────
tokio      = { version = "1.49.0", features = ["full"] }
async-nats = "0.46.0"
futures    = "0.3.32"

# ── Auth / crypto ────────────────────────────────────────────────
nkeys          = "0.4.5"
reqwest        = { version = "0.13.2", features = ["json", "form"] }
axum           = { version = "0.8.8", features = ["json"] }
base64         = "0.22.1"
jsonwebtoken   = { version = "10.3.0", features = ["rsa", "rust_crypto"] }
rand           = "0.8.5"
rsa            = "0.9.10"

# ── Utilities ────────────────────────────────────────────────────
uuid               = { version = "1.21.0", features = ["serde", "v4"] }
chrono             = { version = "0.4.43", features = ["serde"] }
thiserror          = "2.0.18"
anyhow             = "1.0.101"
strum              = { version = "0.27.2", features = ["derive"] }
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dirs               = "6.0.0"

# ── CLI / TUI ────────────────────────────────────────────────────
clap      = { version = "4.5.59", features = ["derive"] }
ratatui   = "0.30.0"
crossterm = "0.29.0"

# ── GUI ──────────────────────────────────────────────────────────
dioxus = { version = "0.7.3", features = ["desktop"] }

# ── Dev / test ───────────────────────────────────────────────────
axum-test = "18.7.0"
