[package]
name = "mock-oidc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "10.3.0", features = ["rsa", "rust_crypto"] }
chrono = "0.4.43"
uuid = "1.20.0"
base64 = "0.22.1"
rand = "0.8"
rsa = "0.9.10"
