[package]
name = "mock-oidc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum         = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
jsonwebtoken = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
base64       = { workspace = true }
rand         = { workspace = true }
rsa          = { workspace = true }
