[package]
name = "openlink-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "form"] }
nkeys = "0.4"
uuid = { version = "1.20", features = ["v4"] }
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openlink-sdk = { path = "../openlink-sdk" }
openlink-models = { path = "../openlink-models" }

[dev-dependencies]
axum-test = "16"
