[package]
name = "openlink-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum               = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
reqwest            = { workspace = true }
nkeys              = { workspace = true }
uuid               = { workspace = true }
base64             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
openlink-sdk       = { workspace = true }
openlink-models    = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
