[package]
name = "openlink-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
openlink-sdk = { path = "../openlink-sdk" }
openlink-models = { path = "../openlink-models" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
uuid = { version = "1.20.0", features = ["v4"] }
chrono = "0.4.43"
ratatui = "0.30.0"
crossterm = "0.29.0"
async-nats = "0.46.0"
reqwest = { version = "0.13.2", features = ["form", "json"] }
