[package]
name = "openlink-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
openlink-sdk    = { workspace = true }
openlink-models = { workspace = true }
tokio           = { workspace = true }
clap            = { workspace = true }
serde_json      = { workspace = true }
serde           = { workspace = true }
futures         = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
ratatui         = { workspace = true }
crossterm       = { workspace = true }
async-nats      = { workspace = true }
reqwest         = { workspace = true }
