[package]
name = "openlink-gui"
version = "0.1.0"
edition = "2021"
description = "OpenLink DCDU / ATC GUI (Dioxus Desktop)"

[dependencies]
openlink-sdk = { path = "../openlink-sdk" }
openlink-models = { path = "../openlink-models" }
dioxus = { version = "0.7.0", features = ["desktop"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-nats = "0.33"
nkeys = "0.4.5"
reqwest = { version = "0.13.2", features = ["json"] }
dirs = "5"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
