[package]
name = "openlink-gui"
version = "0.1.0"
edition = "2021"
description = "OpenLink DCDU / ATC GUI (Dioxus Desktop)"

[dependencies]
openlink-sdk    = { workspace = true }
openlink-models = { workspace = true }
dioxus          = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
futures         = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
async-nats      = { workspace = true }
nkeys           = { workspace = true }
reqwest         = { workspace = true }
dirs            = { workspace = true }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
