[package]
name = "openlink-loadtest"
version = "0.1.0"
edition = "2024"

[dependencies]
openlink-models = { workspace = true }
openlink-sdk = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
