[package]
name = "openlink-sdk"
version = "0.1.0"
edition = "2021"
description = "Reference SDK for OpenLink integration (Rust/WASM)"

[dependencies]
openlink-models = { path = "../openlink-models" }
async-nats = "0.33"
nkeys = "0.4.5"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
