[package]
name = "openlink-sdk"
version = "0.1.0"
edition = "2021"
description = "Reference SDK for OpenLink integration (Rust/WASM)"

[dependencies]
openlink-models = { workspace = true }
async-nats      = { workspace = true }
nkeys           = { workspace = true }
reqwest         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
