[package]
name = "openlink-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-nats = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
openlink-models = { path = "../openlink-models" }
openlink-sdk = { path = "../openlink-sdk" }
chrono = "0.4.43"
anyhow = "1.0.101"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
