[package]
name = "openlink-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio              = { workspace = true }
async-nats         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
futures            = { workspace = true }
openlink-models    = { workspace = true }
openlink-sdk       = { workspace = true }
chrono             = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
